--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,15 @@ readme = "README.md"
 python = "~3.11"
 
 
+[tool.poetry.group.dev.dependencies]
+pysen = "^0.11.0"
+black = "^24.4.2"
+isort = "^5.13.2"
+flake8 = "^7.0.0"
+flake8-bugbear = "^24.4.26"
+mypy = "^1.10.0"
+pytest = "^8.2.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
