--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "~3.11"
 yt-dlp = "^2024.4.9"
+boto3 = "^1.34.98"
 
 
 [tool.poetry.group.dev.dependencies]
