--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ flake8 = "^7.0.0"
 flake8-bugbear = "^24.4.26"
 mypy = "^1.10.0"
 pytest = "^8.2.0"
+boto3-stubs = {extras = ["s3"], version = "^1.34.98"}
 
 [build-system]
 requires = ["poetry-core"]
