--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ readme = "README.md"
 python = "~3.11"
 yt-dlp = "^2024.4.9"
 boto3 = "^1.34.98"
+ffmpeg-python = "^0.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
