--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ python = "~3.11"
 yt-dlp = "^2024.4.9"
 boto3 = "^1.34.98"
 ffmpeg-python = "^0.2.0"
+pydantic = "^2.7.1"
 
 
 [tool.poetry.group.dev.dependencies]
