--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ yt-dlp = "^2024.4.9"
 boto3 = "^1.34.98"
 ffmpeg-python = "^0.2.0"
 pydantic = "^2.7.1"
+python-magic = "^0.4.27"
 
 
 [tool.poetry.group.dev.dependencies]
