--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ boto3 = "^1.34.98"
 ffmpeg-python = "^0.2.0"
 pydantic = "^2.7.1"
 python-magic = "^0.4.27"
+httpx = "^0.27.0"
 
 
 [tool.poetry.group.dev.dependencies]
