--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ ffmpeg-python = "^0.2.0"
 pydantic = "^2.7.1"
 python-magic = "^0.4.27"
 httpx = "^0.27.0"
+pyyaml = "^6.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
