--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ flake8-bugbear = "^24.4.26"
 mypy = "^1.10.0"
 pytest = "^8.2.0"
 boto3-stubs = {extras = ["s3"], version = "^1.34.98"}
+types-pyyaml = "^6.0.12.20240311"
 
 [build-system]
 requires = ["poetry-core"]
