--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ pydantic = "^2.7.1"
 python-magic = "^0.4.27"
 httpx = "^0.27.0"
 pyyaml = "^6.0.1"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
