--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ python-magic = "^0.4.27"
 httpx = "^0.27.0"
 pyyaml = "^6.0.1"
 python-dotenv = "^1.0.1"
+fastapi = "^0.111.0"
 
 
 [tool.poetry.group.dev.dependencies]
