--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ httpx = "^0.27.0"
 pyyaml = "^6.0.1"
 python-dotenv = "^1.0.1"
 fastapi = "^0.111.0"
+uvicorn = "^0.29.0"
 
 
 [tool.poetry.group.dev.dependencies]
