--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ mypy = "^1.10.0"
 pytest = "^8.2.0"
 boto3-stubs = {extras = ["s3"], version = "^1.34.98"}
 types-pyyaml = "^6.0.12.20240311"
+ariadne-codegen = "^0.13.0"
 
 [build-system]
 requires = ["poetry-core"]
