configure ariadne-codegen

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,19 @@ enable_mypy = true
 mypy_preset = "strict"
 line_length = 88
 py_version = "py311"
+mypy_ignore_packages = ["amaterus_crawler.graphql_client.*"]
 
   [[tool.pysen.lint.mypy_targets]]
     paths = ["."]
 
+[tool.pysen.lint.source]
+  excludes = ["amaterus_crawler/graphql_client/"]
+
+[tool.ariadne-codegen]
+queries_path = "graphql_queries/"
+schema_path  = "schema.graphql"
+target_package_path = "amaterus_crawler/"
+async_client = true
 
 [tool.poetry]
 name = "amaterus-crawler"
